--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,6 @@ services:
     build: .
     ports:
       - "8080:80"
-    environment:
-      APP_URL: "http://localhost:8080"
-      CLIENT_ID: "<CLIENT_ID_FROM_YNAB>"
+    env_file: '.env'
     container_name: br4
     restart: unless-stopped
