add onboarding wizard

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "d3": "^7.9.0",
     "ng2-cookies": "^1.0.12",
     "rxjs": "7.4",
+    "shepherd.js": "^11.0.1",
     "ynab": "^2.6.0",
     "zone.js": "^0.15.0"
   },
